--- a/app/modules/general/scss/_general_settings.scss
+++ b/app/modules/general/scss/_general_settings.scss
@@ -8,6 +8,7 @@
 $topbar-bg-color: $darker-grey;
 $topbar-height: 45px;
 $horizontal-iconnav-height: 40px;
+$smallscreen-connection-buttons-height: 40px;
 
 html, body{
   font-size: 100%;
